// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid a11yTitle and aria-label renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
}

<div>
  <div
    class="c0"
  >
    <div
      aria-label="My Grid"
      class="c1"
    />
    <div
      aria-label="My Other Grid"
      class="c1"
    />
  </div>
</div>
`;

exports[`Grid align renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  align-items: flex-start;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  align-items: center;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  align-items: flex-end;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  align-items: stretch;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  align-items: baseline;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  align-items: normal;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  align-items: first baseline;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  align-items: last baseline;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  align-items: safe center;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  align-items: unsafe center;
}

.c11 {
  display: grid;
  box-sizing: border-box;
  align-items: inherit;
}

.c12 {
  display: grid;
  box-sizing: border-box;
  align-items: initial;
}

.c13 {
  display: grid;
  box-sizing: border-box;
  align-items: unset;
}

<div
  class="c0"
>
  <div
    align="start"
    class="c1"
  />
  <div
    align="center"
    class="c2"
  />
  <div
    align="end"
    class="c3"
  />
  <div
    align="stretch"
    class="c4"
  />
  <div
    align="baseline"
    class="c5"
  />
  <div
    align="normal"
    class="c6"
  />
  <div
    align="first baseline"
    class="c7"
  />
  <div
    align="last baseline"
    class="c8"
  />
  <div
    align="safe center"
    class="c9"
  />
  <div
    align="unsafe center"
    class="c10"
  />
  <div
    align="inherit"
    class="c11"
  />
  <div
    align="initial"
    class="c12"
  />
  <div
    align="unset"
    class="c13"
  />
</div>
`;

exports[`Grid alignContent renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  align-content: flex-start;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  align-content: center;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  align-content: space-between;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  align-content: space-around;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  align-content: flex-end;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  align-content: stretch;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  align-content: baseline;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  align-content: space-evenly;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  align-content: normal;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  align-content: first baseline;
}

.c11 {
  display: grid;
  box-sizing: border-box;
  align-content: last baseline;
}

.c12 {
  display: grid;
  box-sizing: border-box;
  align-content: safe center;
}

.c13 {
  display: grid;
  box-sizing: border-box;
  align-content: unsafe center;
}

.c14 {
  display: grid;
  box-sizing: border-box;
  align-content: inherit;
}

.c15 {
  display: grid;
  box-sizing: border-box;
  align-content: initial;
}

.c16 {
  display: grid;
  box-sizing: border-box;
  align-content: unset;
}

<div
  class="c0"
>
  <div
    aligncontent="start"
    class="c1"
  />
  <div
    aligncontent="center"
    class="c2"
  />
  <div
    aligncontent="between"
    class="c3"
  />
  <div
    aligncontent="around"
    class="c4"
  />
  <div
    aligncontent="end"
    class="c5"
  />
  <div
    aligncontent="stretch"
    class="c6"
  />
  <div
    aligncontent="baseline"
    class="c7"
  />
  <div
    aligncontent="evenly"
    class="c8"
  />
  <div
    aligncontent="normal"
    class="c9"
  />
  <div
    aligncontent="first baseline"
    class="c10"
  />
  <div
    aligncontent="last baseline"
    class="c11"
  />
  <div
    aligncontent="space-between"
    class="c3"
  />
  <div
    aligncontent="space-around"
    class="c4"
  />
  <div
    aligncontent="space-evenly"
    class="c8"
  />
  <div
    aligncontent="safe center"
    class="c12"
  />
  <div
    aligncontent="unsafe center"
    class="c13"
  />
  <div
    aligncontent="inherit"
    class="c14"
  />
  <div
    aligncontent="initial"
    class="c15"
  />
  <div
    aligncontent="unset"
    class="c16"
  />
</div>
`;

exports[`Grid areas renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "header main footer" "header sidebar footer" ". .";
  grid-template-columns: 75% 25%;
  grid-template-rows: 48px 384px 96px;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`Grid areas renders when given an array of string arrays 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "header header" "sidebar main" "footer footer";
  grid-template-columns: 75% 25%;
  grid-template-rows: 48px 384px 96px;
}

<div
  class="c0"
>
  <div
    areas="header,header,sidebar,main,footer,footer"
    class="c1"
    columns="3/4,1/4"
    rowsprop="xxsmall,medium,xsmall"
  />
</div>
`;

exports[`Grid as renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <article
    class="c1"
  />
</div>
`;

exports[`Grid border 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  border: solid 1px #A9A9A9;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  border-top: solid 1px #A9A9A9;
  border-bottom: solid 1px #A9A9A9;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  border-left: solid 1px #A9A9A9;
  border-right: solid 1px #A9A9A9;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  border-top: solid 1px #A9A9A9;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  border-left: solid 1px #A9A9A9;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  border-bottom: solid 1px #A9A9A9;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  border-right: solid 1px #A9A9A9;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  border: solid 1px accent-1;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  border: solid 2px #A9A9A9;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  border: solid 4px #A9A9A9;
}

.c11 {
  display: grid;
  box-sizing: border-box;
  border: solid 12px #A9A9A9;
}

.c12 {
  display: grid;
  box-sizing: border-box;
  border: solid 24px #A9A9A9;
}

.c13 {
  display: grid;
  box-sizing: border-box;
  border: dotted 1px #A9A9A9;
}

.c14 {
  display: grid;
  box-sizing: border-box;
  border: double 1px #A9A9A9;
}

.c15 {
  display: grid;
  box-sizing: border-box;
  border: dashed 1px #A9A9A9;
}

.c16 {
  display: grid;
  box-sizing: border-box;
  border-top: dotted 4px accent-1;
  border-left: dashed 12px accent-2;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-top: solid 1px #A9A9A9;
    border-bottom: solid 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-left: solid 1px #A9A9A9;
    border-right: solid 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    border-top: solid 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border-left: solid 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-bottom: solid 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-right: solid 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    border: solid 1px accent-1;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    border: solid 2px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    border: solid 4px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    border: solid 6px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 12px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border: dotted 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    border: double 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    border: dashed 1px #A9A9A9;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    border-top: dotted 4px accent-1;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    border-left: dashed 6px accent-2;
  }
}

<div
  class="c0"
>
  <div
    border="all"
    class="c1"
  />
  <div
    border="horizontal"
    class="c2"
  />
  <div
    border="vertical"
    class="c3"
  />
  <div
    border="top"
    class="c4"
  />
  <div
    border="left"
    class="c5"
  />
  <div
    border="bottom"
    class="c6"
  />
  <div
    border="right"
    class="c7"
  />
  <div
    border="[object Object]"
    class="c8"
  />
  <div
    border="[object Object]"
    class="c1"
  />
  <div
    border="[object Object]"
    class="c1"
  />
  <div
    border="[object Object]"
    class="c9"
  />
  <div
    border="[object Object]"
    class="c10"
  />
  <div
    border="[object Object]"
    class="c11"
  />
  <div
    border="[object Object]"
    class="c12"
  />
  <div
    border="[object Object]"
    class="c13"
  />
  <div
    border="[object Object]"
    class="c14"
  />
  <div
    border="[object Object]"
    class="c15"
  />
  <div
    border="[object Object],[object Object]"
    class="c16"
  />
</div>
`;

exports[`Grid columns renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: 50% 50%;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: 33.33% 66.66%;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: 25% 75%;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: minmax(50%,50%) 25% 75%;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,minmax(min(192px,100%),1fr) );
}

.c6 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,minmax(33.33%,1fr) );
}

.c7 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,1fr );
}

.c8 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(min(192px,100%),1fr) );
}

.c9 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,minmax(min(192px,100%),384px) );
}

.c10 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(min(192px,100%),50%) );
}

.c11 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(25%,384px) );
}

.c12 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,minmax(auto,auto) );
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c12"
  />
</div>
`;

exports[`Grid fill renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}

.c2 {
  display: grid;
  box-sizing: border-box;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  width: 100%;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  height: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
    fillcontainer="horizontal"
  />
  <div
    class="c4"
    fillcontainer="vertical"
  />
</div>
`;

exports[`Grid gap renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 12px 12px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 24px 24px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 48px 48px;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  grid-row-gap: 12px;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  grid-row-gap: 24px;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  grid-row-gap: 48px;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  grid-column-gap: 12px;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  grid-column-gap: 24px;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  grid-column-gap: 48px;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 12px 24px;
}

.c11 {
  display: grid;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <div
    class="c1"
    gap="small"
  />
  <div
    class="c2"
    gap="medium"
  />
  <div
    class="c3"
    gap="large"
  />
  <div
    class="c4"
    gap="[object Object]"
  />
  <div
    class="c5"
    gap="[object Object]"
  />
  <div
    class="c6"
    gap="[object Object]"
  />
  <div
    class="c7"
    gap="[object Object]"
  />
  <div
    class="c8"
    gap="[object Object]"
  />
  <div
    class="c9"
    gap="[object Object]"
  />
  <div
    class="c10"
    gap="[object Object]"
  />
  <div
    class="c11"
    gap="[object Object]"
  />
</div>
`;

exports[`Grid height 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  height: 96px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  height: 192px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  height: 384px;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  height: 768px;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  height: 1152px;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  height: 111px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      heightprop="xsmall"
    />
    <div
      class="c2"
      heightprop="small"
    />
    <div
      class="c3"
      heightprop="medium"
    />
    <div
      class="c4"
      heightprop="large"
    />
    <div
      class="c5"
      heightprop="xlarge"
    />
    <div
      class="c6"
      heightprop="111px"
    />
  </div>
</div>
`;

exports[`Grid height object 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  max-height: 100%;
  height: 100px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      heightprop="[object Object]"
    />
  </div>
</div>
`;

exports[`Grid justify renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  justify-items: flex-start;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  justify-items: center;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  justify-items: flex-end;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  justify-items: stretch;
}

<div
  class="c0"
>
  <div
    class="c1"
    justify="start"
  />
  <div
    class="c2"
    justify="center"
  />
  <div
    class="c3"
    justify="end"
  />
  <div
    class="c4"
    justify="stretch"
  />
</div>
`;

exports[`Grid justifyContent renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  justify-content: flex-start;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  justify-content: center;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  justify-content: space-between;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  justify-content: space-around;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  justify-content: flex-end;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  justify-content: stretch;
}

<div
  class="c0"
>
  <div
    class="c1"
    justifycontent="start"
  />
  <div
    class="c2"
    justifycontent="center"
  />
  <div
    class="c3"
    justifycontent="between"
  />
  <div
    class="c4"
    justifycontent="around"
  />
  <div
    class="c5"
    justifycontent="end"
  />
  <div
    class="c6"
    justifycontent="stretch"
  />
</div>
`;

exports[`Grid pad 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  padding: 12px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  padding: 24px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  padding: 48px;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  padding-left: 12px;
  padding-right: 12px;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  padding-bottom: 12px;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  padding-left: 12px;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  padding-right: 12px;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  padding-inline-start: 12px;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  padding-inline-end: 12px;
}

.c11 {
  display: grid;
  box-sizing: border-box;
  padding-top: 12px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding-left: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding-inline-start: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    padding-inline-end: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    padding-top: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    pad="small"
  />
  <div
    class="c2"
    pad="medium"
  />
  <div
    class="c3"
    pad="large"
  />
  <div
    class="c4"
    pad="[object Object]"
  />
  <div
    class="c5"
    pad="[object Object]"
  />
  <div
    class="c6"
    pad="[object Object]"
  />
  <div
    class="c7"
    pad="[object Object]"
  />
  <div
    class="c8"
    pad="[object Object]"
  />
  <div
    class="c9"
    pad="[object Object]"
  />
  <div
    class="c10"
    pad="[object Object]"
  />
  <div
    class="c11"
    pad="[object Object]"
  />
</div>
`;

exports[`Grid renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`Grid responsive 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c1"
  />
</div>
`;

exports[`Grid rows renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-rows: minmax(192px,384px) 768px 384px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  grid-template-rows: 192px 768px 384px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  grid-auto-rows: 192px;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
</div>
`;

exports[`Grid width 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  width: 96px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  width: 192px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  width: 384px;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  width: 768px;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  width: 1152px;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  width: 111px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      widthprop="xsmall"
    />
    <div
      class="c2"
      widthprop="small"
    />
    <div
      class="c3"
      widthprop="medium"
    />
    <div
      class="c4"
      widthprop="large"
    />
    <div
      class="c5"
      widthprop="xlarge"
    />
    <div
      class="c6"
      widthprop="111px"
    />
  </div>
</div>
`;

exports[`Grid width object 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  background-color: #FFFFFF;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  max-width: 100%;
  width: 100px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      widthprop="[object Object]"
    />
  </div>
</div>
`;
